# stowball

./: .gitignore  Cargo.toml  README.md  default.nix
scripts/: stal-build-desktop  stal-build-wasm  stal-run-desktop  stal-serve-ui
scripts/util/: background  background.sh  cargo-args.sh  stal-kill.sh
servers/ui/: go.mod  main.go
servers/ui/client/: index.html  script.js  style.css  wasm-pack
src/: graphics.rs  lib.rs  main.rs  telemetry.rs
src/graphics/: wasm.rs  wgpu.rs
