[package]
name = "stowball"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
  "HtmlCanvasElement",
  "Window",
]}
